Finished cards replacement and feedback box

--- a/app/assets/stylesheets/nexmo.scss
+++ b/app/assets/stylesheets/nexmo.scss
@@ -76,6 +76,9 @@ $font-family: 'Lato', sans-serif;
 @import "../volta/scss/components/badge";
 @import "../volta/scss/components/color-classes";
 @import "../volta/scss/components/other-elements";
+@import "../volta/scss/components/boxes";
+@import "../volta/scss/components/form-elements";
+@import "../volta/scss/components/spinner";
 
 .Vlt-sidenav {
 	display: inline-flex; // Temporary
