--- a/app/assets/stylesheets/objects/_card.scss
+++ b/app/assets/stylesheets/objects/_card.scss
@@ -1,207 +1,3 @@
-$ball-size: 44px;
-$card-animation-speed: 200ms;
-
-@mixin card--product($color, $color-light) {
-  color: $color;
-  hr { border-top-color: mix($color, $white, 20%) }
-  h3 { color: $color; }
-
-  .card--with-icon__divider {
-    border-bottom: 2px solid $color;
-    i {
-      color: $color;
-      background: $color-light;
-      border-color: $color;
-    }
-  }
-}
-
-@mixin card--image($color, $name, $extension: 'png') {
-  background-image: url('/assets/images/cards/#{$name}.#{$extension}');
-  border-color: rgba($color, 0.5);
-
-  &:hover {
-    border-color: rgba($color, 1);
-  }
-}
-
-.card-grid {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0 -10px;
-
-  > div {
-    flex: 1;
-    min-width: 340px;
-    padding: 0 10px;
-
-    @include mobile() {
-      min-width: 280px;
-    }
-  }
-}
-
-.card {
-  display: block;
-  position: relative;
-  background: $white;
-  border: $border;
-  border-radius: $radius;
-  box-shadow: $shadow;
-  margin-bottom: $spacing;
-  font-size: 16px;
-
-  .icon-external-link {
-    display: none;
-  }
-
-  .spacious {
-    padding: $spacing 0;
-  }
-
-  a {
-    display: inline-block;
-    padding: $spacing/2 0;
-    color: $text;
-    border-bottom: none;
-
-    &:hover {
-      color: $blue-dark;
-    }
-
-    &.poster {
-      display: block;
-      padding: 0;
-    }
-
-    &.button {
-      color: $white;
-      text-align: center;
-    }
-  }
-
-  h2 {
-    padding: 0 20px;
-    margin: 0;
-    color: $text;
-
-    a {
-      display: block;
-      color: $text;
-    }
-
-    span {
-      display: block;
-    }
-
-    small {
-      display: block;
-      font-weight: 500;
-      font-size: 1.7rem;
-    }
-  }
-
-  h3 {
-    color: $blue-dark;
-    margin-bottom: 5px;
-
-    .label {
-      font-size: 12px;
-    }
-  }
-
-  img {
-    display: block;
-  }
-
-  > nav, > p {
-    position: relative;
-    padding: 10px $spacing;
-
-    a {
-      display: block;
-      padding: 3px 0;
-
-      &.inline {
-        display: inline-block;
-      }
-    }
-
-    br {
-      line-height: 30px;
-    }
-
-    &.tight {
-      padding-top: 0;
-    }
-  }
-
-  &--sms { @include card--product($sms, $sms-light); }
-  &--number-insight { @include card--product($number-insight, $number-insight-light); }
-  &--voice { @include card--product($voice, $voice-light); }
-  &--verify { @include card--product($verify, $verify-light); }
-  &--account { @include card--product($account, $account-light); }
-}
-
-.card--with-icon {
-  h2, > nav, > p {
-    padding-left: ($spacing * 2) + $ball-size;
-  }
-}
-
-.card--with-icon__divider {
-  position: relative;
-  border-bottom: 2px solid $blue-dark;
-  margin-top: 2px;
-  z-index: 3;
-
-  i {
-    background: $ice;
-    color: $blue-dark;
-    border: 1px solid $blue;
-    border-radius: 100%;
-    position: absolute;
-    width: $ball-size;
-    height: $ball-size;
-    line-height: $ball-size;
-    font-size: $ball-size * 0.6;
-    text-align: center;
-    left: $spacing;
-    top: -$ball-size/2;
-  }
-}
-
-.card {
-  &--android { @include card--image(#A4C639, 'android'); }
-  &--android-outline { @include card--image(#A4C639, 'android-outline'); }
-  &--ios { @include card--image(#FF6537, 'ios'); }
-  &--ios-outline { @include card--image(#FF6537, 'ios-outline'); }
-  &--javascript { @include card--image(#F7DF1E, 'javascript'); }
-  &--javascript-outline { @include card--image(#F7DF1E, 'javascript-outline'); }
-
-  &--image {
-    background-position: right center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    transition: border-color $card-animation-speed ease-in-out;
-
-    &:before {
-      content: ' ';
-      display: block;
-      position: absolute;
-      top: 0; right: 0; bottom: 0; left: 0;
-      background: rgba($white, 0.4);
-      transition: background $card-animation-speed ease-in-out;
-    }
-
-    &:hover {
-      &:before {
-        background: rgba($white, 0);
-      }
-    }
-  }
-}
-
 .Nxd-card--tutorials {
   .Vlt-badge {
     bottom: -10px;
@@ -214,6 +10,18 @@ $card-animation-speed: 200ms;
     }
   }
 }
+
+.Nxd-card--products {
+  nav a {
+    display: inline-block;
+    margin: $unit0 0;
+    width: 49%;
+
+    .Vlt-icon {
+      margin-right: $unit1;
+    }
+  } 
+} 
 
 .Nxd-card__link {
   border-bottom: 1px solid $grey-light;
@@ -281,5 +89,14 @@ $card-animation-speed: 200ms;
     position: absolute;
     top: 16px;
     right: 16px;
+  }
+}
+
+.Nxd-products-banner {
+  text-align: center;
+
+  .Vlt-icon {
+    display: block;
+    margin: 0 auto $unit1;
   }
 }
