Community and Team pages

--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -99,7 +99,7 @@
 
 #subnav {
   background: $white;
-  margin-bottom: $spacing;
+  margin-bottom: 40px;
   box-shadow: $shadow-soft;
 
   .container {
