--- a/app/assets/stylesheets/nexmo.scss
+++ b/app/assets/stylesheets/nexmo.scss
@@ -96,7 +96,6 @@ body {
 @import "syntax";
 
 @import "objects/api-status";
-@import "objects/avatar";
 @import "objects/button";
 @import "objects/box";
 @import "objects/card";
@@ -122,7 +121,7 @@ body {
 @import "layout/header";
 @import "layout/hero";
 @import "layout/footer";
-@import "layout/jobs";
+@import "layout/team";
 @import "layout/landing";
 @import "layout/markdown";
 @import "layout/search";
