--- a/app/assets/stylesheets/nexmo.scss
+++ b/app/assets/stylesheets/nexmo.scss
@@ -125,5 +125,6 @@ body {
 @import "layout/landing";
 @import "layout/markdown";
 @import "layout/search";
+@import "layout/changelog";
 
 @import "themes/ea";
