--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -1,34 +1,43 @@
-#header {
+.Nxd-main-header {
   background: $blue-dark;
   color: $white;
-  padding: $spacing 0;
+  padding: $unit2 0;
 
   @include mobile {
     text-align: center;
     padding: $spacing*0.75 0 $spacing*0.5 0;
   };
 
-  a {
-    color: mix($white, $blue-dark, 90%);
-    border: none;
+  .container {
+    display: flex;
+    align-items: center;
+    flex-flow: row wrap;
+
+    @media #{$S-only} {
+      flex-flow: column;
+    }
   }
 
   nav {
-    float: right;
-    line-height: 38px;
+    flex: 1;
+    text-align: center;
+
+    @media #{$M-plus} {
+      white-space: nowrap;
+      text-align: right;
+    }
 
     a {
-      margin-left: $spacing;
-      letter-spacing: 0.13px;
+      display: inline-block;
+      margin: $unit2 $unit1;
+      color: rgba($white, 80);
 
-      @include mobile {
-        margin: 0 $spacing/2 0 $spacing/2;
+      @media #{$M-plus} {
+         margin: $unit1 $unit3 $unit1 0;
       }
 
-      b, &:hover {
+      &:hover {
         color: $white;
-        font-weight: 600;
-        letter-spacing: 0px;
       }
     }
 
@@ -37,64 +46,55 @@
     };
   }
 
-  // @media screen and (max-width: )
-}
-
-#logo {
-  display: inline-block;
-  line-height: 38px;
-  font-size: 26px;
-
-  // @ https://css-tricks.com/the-image-replacement-museum/#ir-h5bp
-  span {
-    display: block;
-    float: left;
-    margin-right: 10px;
-    border: 0;
-    font: 0/0 a;
-    text-shadow: none;
-    color: transparent;
-    background: image-url('logo@3x.png');
-    background-size: contain;
-    width: 43px;
-    height: 38px;
-  }
-
-  @include tablet-only {
-    font-size: 20px;
+  .Vlt-btn {
+    margin: 0;
   }
 }
 
-#header-hiring {
-  font-size: 13px;
-  padding: 3px 6px;
-  margin-left: 8px;
-  top: -3px;
+.Nxd-logo {
+  flex: 1;
   position: relative;
-  height: $spacing;
-  background: $white;
-  color: $blue-dark;
-  line-height: 1em;
-  transform: translateX(0);
-  transition: transform  200ms ease-in-out;
-  display: inline-block;
-  border-radius: 2px;
+  display: flex;
+  align-items: center;
 
-  &:hover {
-    transform: translateX(5px);
+  a:nth-child(2) {
+    flex-shrink: 0;
   }
 
-  &:after {
-    content: '';
-    position: absolute;
-    border-style: solid;
-    border-width: 5px 5px 5px 0;
-    border-color: transparent $white;
-    display: block;
-    width: 0;
-    left: -5px;
-    top: 5px;
+  img {
+    height: 35px;
   }
+
+  &__hiring {
+    font-size: 1.3rem;
+    padding: 6px 8px;
+    margin-left: 10px;
+    position: relative;
+    background: $white;
+    color: $blue-dark;
+    line-height: 1em;
+    transform: translateX(0);
+    transition: transform  200ms ease-in-out;
+    display: inline-block;
+    border-radius: 4px;
+
+    &:hover {
+      transform: translateX(5px);
+    }
+
+    &:after {
+      content: '';
+      position: absolute;
+      border-style: solid;
+      border-width: 5px 5px 5px 0;
+      border-color: transparent $white;
+      display: block;
+      width: 0;
+      left: -4px;
+      top: 7px;
+    }
+  }
+
 }
 
 #subnav {
