--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -45,7 +45,7 @@
 
     <div id="footer-outbound-links">
       <a href="https://nexmo.com/" id="footer-logo">
-        <%= image_tag 'logo_vonage.png' %>
+        <%= image_tag 'nexmo-vonage-white.svg' %>
       </a>
 
       <a href="https://www.nexmostatus.com/" target="_blank" class="api-status">
