Tabs and minor fixes

--- a/app/assets/stylesheets/_typography.scss
+++ b/app/assets/stylesheets/_typography.scss
@@ -61,14 +61,18 @@ a {
 }
 
 pre.highlight {
-  background: $code-background;
+  -webkit-font-smoothing: antialiased;
   padding: $spacing;
   color: $white;
   margin-bottom: $spacing;
   line-height: 1.35;
   overflow: auto;
   position: relative;
-  border-radius: 3px;
+  background: $black;
+
+  code {
+    color: $grey-light;
+  }
 }
 
 pre {
@@ -88,16 +92,7 @@ pre {
 }
 
 blockquote {
-  background: $white;
-  box-shadow: $shadow-soft;
-  border: $shadow;
-  border-left: 5px solid $pink;
-  padding: $spacing * 0.75;
-  font-style: italic;
-  margin-bottom: $spacing;
-  margin-top: $spacing;
-  font-size: 15px;
-  border-radius: 3px;
+  @extend .Vlt-callout, .Vlt-callout--tip;
 
   p {
     margin: 0;
@@ -125,7 +120,7 @@ blockquote {
 }
 
 
-#primary-content {
+.Nxd-article {
 
   .tabs-panel {
     h2, h3, h4, h5, h6 {
