--- a/app/views/static/community.html.erb
+++ b/app/views/static/community.html.erb
@@ -1,5 +1,8 @@
-<h1>Nexmo ❤️ community</h1>
+<div class="center">
+  <h1>Nexmo ❤️ community</h1>
 <p class="p-large">Resources for and by the Community</p>
+
+</div>
 
 <% if @sessions.any? %>
   
