--- a/app/views/static/_products.html.erb
+++ b/app/views/static/_products.html.erb
@@ -29,7 +29,7 @@
     <div class="Vlt-card Vlt-card--image Nxd-card--products">
       <div class="Vlt-card__image Vlt-card__image--app Vlt-card__image--green">
         <div class="Vlt-card__image__icon">
-          <svg><use xlink:href="/symbol/volta-icons.svg#Vlt-icon-message"/></svg>
+          <svg><use xlink:href="/symbol/volta-icons.svg#Vlt-icon-phone"/></svg>
         </div>
       </div>
       <div class="Vlt-card__content">
@@ -56,7 +56,7 @@
     <div class="Vlt-card Vlt-card--image Nxd-card--products">
       <div class="Vlt-card__image Vlt-card__image--app Vlt-card__image--indigo">
         <div class="Vlt-card__image__icon">
-          <svg><use xlink:href="/symbol/volta-icons.svg#Vlt-icon-message"/></svg>
+          <svg><use xlink:href="/symbol/volta-icons.svg#Vlt-icon-chat"/></svg>
         </div>
       </div>
       <div class="Vlt-card__content">
@@ -82,7 +82,7 @@
     <div class="Vlt-card Vlt-card--image Nxd-card--products">
       <div class="Vlt-card__image Vlt-card__image--app Vlt-card__image--orange">
         <div class="Vlt-card__image__icon">
-          <svg><use xlink:href="/symbol/volta-icons.svg#Vlt-icon-message"/></svg>
+          <svg><use xlink:href="/symbol/volta-icons.svg#Vlt-icon-file-search"/></svg>
         </div>
       </div>
       <div class="Vlt-card__content">
@@ -108,7 +108,7 @@
     <div class="Vlt-card Vlt-card--image Nxd-card--products">
       <div class="Vlt-card__image Vlt-card__image--app Vlt-card__image--blue-light">
         <div class="Vlt-card__image__icon">
-          <svg><use xlink:href="/symbol/volta-icons.svg#Vlt-icon-message"/></svg>
+          <svg><use xlink:href="/symbol/volta-icons.svg#Vlt-icon-user"/></svg>
         </div>
       </div>
       <div class="Vlt-card__content">
