Coloured icons on documentation links

--- a/app/assets/stylesheets/objects/_navigation.scss
+++ b/app/assets/stylesheets/objects/_navigation.scss
@@ -30,7 +30,7 @@
     font-weight: 500;
   }
 
-  a, span {
+  /* a, span {
     color: $gray;
     font-weight: 600;
     padding: 5px 0;
@@ -54,7 +54,7 @@
       overflow: visible;
       border-left: none;
     }
-  }
+  } */
 
   .expanded {
     border-left: 1px solid $gray-light;
