--- a/app/views/layouts/documentation.html.erb
+++ b/app/views/layouts/documentation.html.erb
@@ -9,7 +9,7 @@
         <div class="row"> 
           <div id="Vlt-sidenav" class="Vlt-sidenav Vlt-sidenav--light">
             <div class="Vlt-sidenav__scroll">
-              <nav class="Vlt-sidemenu sidenav" id="sidenav" data-turbolinks-permanent>
+              <nav class="sidenav" id="sidenav" data-turbolinks-permanent>
                 <%= sidenav(@sidenav_root) %>
               </nav>
             </div>
