--- a/app/assets/volta/scss/components/side-navigation/_side-nav--structure.scss
+++ b/app/assets/volta/scss/components/side-navigation/_side-nav--structure.scss
@@ -112,6 +112,15 @@
 	}
 
 	.Vlt-sidemenu {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+
+		ul {
+			list-style: none;
+			margin: 0;
+			padding: 0;
+		}
 
 		// Setting main margins
 
