--- a/app/views/layouts/partials/api/_voice.html.erb
+++ b/app/views/layouts/partials/api/_voice.html.erb
@@ -1,6 +1,6 @@
 <div id="Vlt-sidenav" class="Vlt-sidenav Vlt-sidenav--light js-scrollspy">
   <div class="Vlt-sidenav__scroll">
-    <ul class="Vlt-sidemenu">
+    <ul class="Vlt-sidemenu Vlt-sidemenu--rounded">
       <li>
         <li role="separator"><h5 class="Vlt-sidemenu__title">Voice</h5></li>        
           <li>
