--- a/app/views/open_api/show.html.erb
+++ b/app/views/open_api/show.html.erb
@@ -14,7 +14,7 @@
           <h1>
             <%= @definition.info['title'] %>
             <% if @definition.info['x-label'] %>
-              <span class="label label--<%= @definition.info['x-label'].parameterize %>">
+              <span class="Vlt-badge label--<%= @definition.info['x-label'].parameterize %>">
                 <%= @definition.info['x-label'] %>
               </span>
             <% end %>
