initial changes to api menus

--- a/app/views/layouts/api.html.erb
+++ b/app/views/layouts/api.html.erb
@@ -7,12 +7,14 @@
     <div class="wrapper">
       <div class="container">
         <div class="row">
-          <nav class="columns small-12 medium-3 sidenav" data-turbolinks-permanent>
-            <% begin %>
-              <%= render partial: "layouts/partials/#{@side_navigation}" %>
-            <% rescue ActionView::MissingTemplate %>
-              <%= navigation_from_content(content: @content, title: @side_navigation_title) %>
-            <% end %>
+          <nav class="columns small-12 medium-3 sidenav Vlt-sidenav Vlt-sidenav--light" id="Vlt-sidenav" data-turbolinks-permanent>
+            <div class="Vlt-sidenav__scroll">
+              <% begin %>
+                <%= render partial: "layouts/partials/#{@side_navigation}" %>
+              <% rescue ActionView::MissingTemplate %>
+                <%= navigation_from_content(content: @content, title: @side_navigation_title) %>
+              <% end %>
+            </div>
           </nav>
           <div class="columns small-12 medium-9 Vlt-card" id="primary-content">
             <%= yield %>
