--- a/app/views/layouts/api.html.erb
+++ b/app/views/layouts/api.html.erb
@@ -7,7 +7,7 @@
     <div class="wrapper">
       <div class="container">
         <div class="row">
-          <nav class="columns small-12 medium-3 sidenav Vlt-sidenav Vlt-sidenav--light" id="Vlt-sidenav" data-turbolinks-permanent>
+          <nav class="Vlt-sidenav Vlt-sidenav--light" id="Vlt-sidenav" data-turbolinks-permanent>
             <div class="Vlt-sidenav__scroll">
               <% begin %>
                 <%= render partial: "layouts/partials/#{@side_navigation}" %>
