--- a/app/views/layouts/static.html.erb
+++ b/app/views/layouts/static.html.erb
@@ -7,7 +7,7 @@
     <div class="wrapper">
       <div class="container">
         <div class="row">
-          <nav class="columns small-12 medium-3 sidenav" id="sidenav" data-turbolinks-permanent>
+          <nav class="Vlt-sidenav Vlt-sidenav--light" id="sidenav" data-turbolinks-permanent>
             <% if @return_link %>
               <%= link_to @return_link[:path], class: 'sidenav-back', data: { turbolinks: false } do %>
                 <i class="icon icon-angle-left"></i> Back to <%= @return_link[:title] %>
