Added list styles and minor styling fixes

--- a/app/assets/stylesheets/_typography.scss
+++ b/app/assets/stylesheets/_typography.scss
@@ -319,3 +319,10 @@ blockquote {
 .subtle {
   color: $text-subtle;
 }
+
+#primary-content {
+  ul:not([class]) {
+    @extend .Vlt-list, .Vlt-list--simple;
+    list-style: none;
+  }
+}
