--- a/app/assets/stylesheets/nexmo.scss
+++ b/app/assets/stylesheets/nexmo.scss
@@ -75,6 +75,7 @@ $font-family: 'Lato', sans-serif;
 @import "../volta/scss/components/tables";
 @import "../volta/scss/components/callouts";
 @import "../volta/scss/components/tabs";
+@import "../volta/scss/components/lists";
 
 @import "../volta/scss/layout/article";
 
