--- a/app/views/layouts/api.html.erb
+++ b/app/views/layouts/api.html.erb
@@ -16,7 +16,7 @@
               <% end %>
             </div>
           </nav>
-          <div class="columns small-12 medium-9 Vlt-card" id="primary-content">
+          <div class="columns small-12 medium-9 Vlt-card Vlt-article" id="primary-content">
             <%= yield %>
             <%= render partial: 'layouts/partials/feedback' %>
           </div>
