--- a/app/views/static/_products.html.erb
+++ b/app/views/static/_products.html.erb
@@ -1,6 +1,6 @@
 <div class="Vlt-grid Vlt-grid--margin-top4">
   <div class="Vlt-col Vlt-col--1of2" class="Vlt-col Vlt-col--1of2">
-    <div class="Vlt-card Vlt-card--image Nxd-card--products">
+    <div class="Vlt-card Vlt-article--reverse Vlt-card--image Nxd-card--products">
       <div class="Vlt-card__image Vlt-card__image--app Vlt-card__image--purple">
         <div class="Vlt-card__image__icon">
           <svg><use xlink:href="/symbol/volta-icons.svg#Vlt-icon-message"/></svg>
@@ -26,7 +26,7 @@
   </div>
 
   <div class="Vlt-col Vlt-col--1of2">
-    <div class="Vlt-card Vlt-card--image Nxd-card--products">
+    <div class="Vlt-card Vlt-article--reverse Vlt-card--image Nxd-card--products">
       <div class="Vlt-card__image Vlt-card__image--app Vlt-card__image--green">
         <div class="Vlt-card__image__icon">
           <svg><use xlink:href="/symbol/volta-icons.svg#Vlt-icon-phone"/></svg>
@@ -53,7 +53,7 @@
   </div>
 
   <div class="Vlt-col Vlt-col--1of2">
-    <div class="Vlt-card Vlt-card--image Nxd-card--products">
+    <div class="Vlt-card Vlt-article--reverse Vlt-card--image Nxd-card--products">
       <div class="Vlt-card__image Vlt-card__image--app Vlt-card__image--indigo">
         <div class="Vlt-card__image__icon">
           <svg><use xlink:href="/symbol/volta-icons.svg#Vlt-icon-chat"/></svg>
@@ -79,7 +79,7 @@
   </div>
 
   <div class="Vlt-col Vlt-col--1of2">
-    <div class="Vlt-card Vlt-card--image Nxd-card--products">
+    <div class="Vlt-card Vlt-article--reverse Vlt-card--image Nxd-card--products">
       <div class="Vlt-card__image Vlt-card__image--app Vlt-card__image--orange">
         <div class="Vlt-card__image__icon">
           <svg><use xlink:href="/symbol/volta-icons.svg#Vlt-icon-file-search"/></svg>
@@ -105,7 +105,7 @@
   </div>
 
   <div class="Vlt-col Vlt-col--1of2">
-    <div class="Vlt-card Vlt-card--image Nxd-card--products">
+    <div class="Vlt-card Vlt-article--reverse Vlt-card--image Nxd-card--products">
       <div class="Vlt-card__image Vlt-card__image--app Vlt-card__image--blue-light">
         <div class="Vlt-card__image__icon">
           <svg><use xlink:href="/symbol/volta-icons.svg#Vlt-icon-user"/></svg>
@@ -131,7 +131,7 @@
   </div>
 
   <div class="Vlt-col Vlt-col--1of2">
-    <div class="Vlt-card Vlt-card--center">
+    <div class="Vlt-card Vlt-article--reverse Vlt-card--center">
 
       <h3 class="Vlt-grey-dark">Developer API</h3>
       <nav>
@@ -165,7 +165,7 @@
 
 <div class="Vlt-grid">
   <div class="Vlt-col Vlt-col--1of2">
-    <div class="Vlt-card Vlt-card--image Nxd-card--products">
+    <div class="Vlt-card Vlt-article--reverse Vlt-card--image Nxd-card--products">
       <div class="Vlt-card__image Vlt-card__image--app Vlt-card__image--teal">
         <div class="Vlt-card__image__icon">
           <svg><use xlink:href="/symbol/volta-icons.svg#Vlt-icon-duplicate"/></svg>
@@ -191,7 +191,7 @@
   </div>
 
   <div class="Vlt-col Vlt-col--1of2">
-    <div class="Vlt-card Vlt-card--image Nxd-card--products">
+    <div class="Vlt-card Vlt-article--reverse Vlt-card--image Nxd-card--products">
       <div class="Vlt-card__image Vlt-card__image--app Vlt-card__image--teal">
         <div class="Vlt-card__image__icon">
           <svg><use xlink:href="/symbol/volta-icons.svg#Vlt-icon-duplicate"/></svg>
@@ -232,7 +232,7 @@
 <div class="Vlt-grid">
 
   <div class="Vlt-col Vlt-col--1of2">
-    <div class="Vlt-card Vlt-card--image Nxd-card--products">
+    <div class="Vlt-card Vlt-article--reverse Vlt-card--image Nxd-card--products">
       <div class="Vlt-card__image Vlt-card__image--app Vlt-card__image--purple">
         <div class="Vlt-card__image__icon">
           <svg><use xlink:href="/symbol/volta-icons.svg#Vlt-icon-flow"/></svg>
@@ -257,7 +257,7 @@
   </div>
 
   <div class="Vlt-col Vlt-col--1of2">
-    <div class="Vlt-card Vlt-card--image Nxd-card--products">
+    <div class="Vlt-card Vlt-article--reverse Vlt-card--image Nxd-card--products">
       <div class="Vlt-card__image Vlt-card__image--app Vlt-card__image--purple">
         <div class="Vlt-card__image__icon">
           <svg><use xlink:href="/symbol/volta-icons.svg#Vlt-icon-flow"/></svg>
