Changed reset file, added markup filter for blockquotes and tables

--- a/app/assets/stylesheets/nexmo.scss
+++ b/app/assets/stylesheets/nexmo.scss
@@ -1,5 +1,4 @@
-@import "reset";
-
+@import "../volta/scss/lib/reset";
 @import "../volta/scss/lib/mediaqueries";
 @import "../volta/scss/lib/variables";
 @import "../volta/scss/lib/type";
