--- a/app/assets/volta/scss/components/_other-elements.scss
+++ b/app/assets/volta/scss/components/_other-elements.scss
@@ -15,6 +15,11 @@ hr {
 	vertical-align: middle;
 	width: 24px;
 
+	&--18 {
+		height: 18px;
+		width: 18px;
+	}
+
 	&--small {
 		height: 20px;
 		width: 20px;
