--- a/app/assets/volta/scss/components/_spinner.scss
+++ b/app/assets/volta/scss/components/_spinner.scss
@@ -3,7 +3,6 @@
   height: 64px;
   margin: $unit1;
   position: relative;
-  vertical-align: middle;
   width: 64px;
 
   &:before,
@@ -34,6 +33,10 @@
       border-width: 3px;
       margin: 3px;
     }
+  }
+
+  &--middle {
+    vertical-align: middle;
   }
 }
 
