--- a/app/assets/volta/scss/components/side-navigation/_side-nav--collapsible.scss
+++ b/app/assets/volta/scss/components/side-navigation/_side-nav--collapsible.scss
@@ -61,10 +61,10 @@
 
 	&.Vlt-sidenav--collapsed {
 		@media #{$M-plus} {
-			flex: 0 0 60px;
+			flex: 0 0 68px;
 			overflow: visible;
 			position: relative;
-			width: 60px;
+			width: 68px;
 			z-index: 99999; //required for tooltips
 
 			.Vlt-sidenav {
@@ -140,14 +140,16 @@
 					border-radius: 4px;
 					display: inline-flex;
 					flex-flow: column;
-					margin: 0 10px 5px;
+					margin: 0 12px;
 					opacity: 1;
 					padding: 8px 10px;
 					position: static;
 
 					svg {
+						height: 22px;
 						margin: 0;
 						opacity: 0.8;
+						width: 22px;
 					}
 
 					&:after {
