--- a/app/views/open_api/_navigation.html.erb
+++ b/app/views/open_api/_navigation.html.erb
@@ -1,6 +1,6 @@
 <div id="Vlt-sidenav" class="Vlt-sidenav Vlt-sidenav--light js-scrollspy">
-  <div class="Vlt-sidenav__scroll">
-    <ul class="Vlt-sidemenu">
+  <div class="Vlt-sidenav__scroll navigation js-navigation">
+    <ul class="Vlt-sidemenu Vlt-sidemenu--rounded">
       <li><h5 class="Vlt-sidemenu__title"><%= @definition.info['title'] %></h5></li>
           <li>
             <a class="Vlt-sidemenu__link" href="#overview">Overview</a>
