--- a/app/views/open_api/_endpoint.html.erb
+++ b/app/views/open_api/_endpoint.html.erb
@@ -1,5 +1,5 @@
-<div>
-  <div class="slate-layout-documentation">
+<div class="Vlt-grid">
+  <div class="Vlt-col Vlt-col--2of3 Nxd-api__docs">
     <div>
       <%= content_tag :h3, endpoint.summary, id: endpoint.operationId %>
       <% if endpoint.description %>
@@ -64,16 +64,15 @@
     </div>
   </div>
 
-  <div class="slate-layout-code">
-    <div class="slate-layout-code__inner">
-      <br>
+  <div class="Vlt-col Vlt-col--1of3 Nxd-api__code">
       <%= render 'code_examples', endpoint: endpoint %>
 
       <% endpoint.responses.each do |response| %>
         <% id = SecureRandom.hex %>
 
         <h4 class="js-collapsible collapsible <%= response.success? ? 'collapsible--active' : '' %>" data-collapsible-id="<%= id %>">
-          <span class="label label--status--<%= response.code[0] %>xx"><%= response.code %></span> HTTP response
+           HTTP response
+           <span class="Vlt-badge Vlt-badge--<%= response.code[0] == '2' ? 'green' : response.code[0] == '3' ? 'yellow' : 'red'  %>"><%= response.code %></span>
         </h4>
 
         <div id="<%= id %>" style="display: <%= response.success? ? 'block' : 'none' %>;">
@@ -119,7 +118,6 @@
         </div>
       <% end %>
     </div>
-  </div>
 </div>
 
 <% endpoint.callbacks.each do |callback| %>
